fix: alignment of footer

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -27,7 +27,8 @@
 }
 body{
     overflow-x: hidden;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
 }
 
 #progress {
